jodatime,properites